@startuml

title __SRC's Class Diagram__\n

  package  {
    abstract class Animal {
        ~ age : int
        ~ gender : String
        ~ weight : int
        + Animal()
        + eat()
        + sleep()
        {abstract} + move()
    }
  }
  

  package  {
    class Bird {
        + Bird()
        + move()
    }
  }
  

  package  {
    class Chicken {
        + Chicken()
    }
  }
  

  package  {
    class Earth {
        {static} + main()
    }
  }
  

  package  {
    interface Flyable {
        {abstract} + fly()
    }
  }
  

  package  {
    class Human {
        ~ name : String
        ~ age : int
        ~ heightInInches : int
        ~ eyeColor : String
        + Human()
        + speak()
        + eat()
        + walk()
        + work()
    }
  }
  

  package  {
    class Sparrow {
        + Sparrow()
        + fly()
    }
  }
  

  package  {
    class Zoo {
        {static} + main()
    }
  }
  

  Bird -up-|> Animal
  Chicken -up-|> Bird
  Sparrow -up-|> Flyable
  Sparrow -up-|> Bird


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
